1.0.0
-----
 * Allow configuring permissions for uploaded SSTables (CASSANDRASC-71)
 * Refactor Sidecar configuration (CASSANDRASC-69)
 * Add Client Methods for Obtaining Sidecar and Cassandra Health (CASSANDRASC-70)
 * Publish bytes streamed and written metrics (CASSANDRASC-68)
 * Extract the in-jvm dtest template for use in other projects (CASSANDRASC-55)
 * Fix relocation of native libraries for vertx-client-shaded (CASSANDRASC-67)
 * Enrich RetriesExhaustedException to have more information for better visibility (CASSANDRASC-65)
 * Fix failing unit tests in Apache CI (CASSANDRASC-66)
 * Support credential rotation in JmxClient (CASSANDRASC-63)
 * File descriptor is not being closed on MD5 checksum (CASSANDRASC-64)
 * Expose JMX host and port from JMXClient (CASSANDRASC-59)
 * Support retries in Sidecar Client on Invalid Checksum (CASSANDRASC-58)
 * Ignore unknown properties during Sidecar client deserialization (CASSANDRASC-53)
 * Create staging directory if it doesn't exists (CASSANDRASC-56)
 * Remove RESTEasy (CASSANDRASC-57)
 * Use in-jvm dtest framework for integration tests (CASSANDRASC-51)
 * Sidecar returns own version in node settings (CASSANDRASC-52)
 * Deprecate the sidecar cassandra health endpoint containing instance segment (CASSANDRASC-50)
 * Add an endpoint that gives information about the release version & partitioner name of a node (CASSANDRASC-48)
 * Introduce JMX foundation in Sidecar (CASSANDRASC-47)
 * Delegate methods to the RateLimiter (CASSANDRASC-45)
 * Add Schema API (CASSANDRASC-43)
 * Refactor health check to use vertx timer (CASSANDRASC-44)
 * Migrate minikube to testcontainers for integration tests (CASSANDRASC-46)
 * Refactor range and add toString (CASSANDRASC-41)
 * Fix search in list snapshot endpoint (CASSANDRASC-40)
 * Allow Cassandra input validation to be configurable (CASSANDRAC-39)
 * Add endpoint to list snapshot files (CASSANDRASC-38)