@@ -52,9 +52,7 @@ plugins {
     id("org.nosphere.apache.rat") version "0.8.0"
 }
 
-
-ext.dtestJar = System.getenv("DTEST_JAR") ?: "dtest-5.1.jar" // trunk is currently 5.1.jar - update when trunk moves
-println("Using DTest jar: ${ext.dtestJar}")
+println("Using DTest jar: ${dtestVersion}")
 
 // Force checkstyle, rat, and spotBugs to run before test tasks for faster feedback
 def codeCheckTasks = task("codeCheckTasks")
@@ -66,6 +64,9 @@ allprojects {
 
     repositories {
         mavenCentral()
+
+        // for dtest jar
+        mavenLocal()
     }
 
     checkstyle {
@@ -213,8 +214,8 @@ dependencies {
     testFixturesImplementation("io.vertx:vertx-web:${project.vertxVersion}") {
         exclude group: 'junit', module: 'junit'
     }
-    integrationTestImplementation(files("dtest-jars/${dtestJar}"))
-    integrationTestImplementation("org.apache.cassandra:dtest-api:0.0.16")
+    integrationTestImplementation(group: 'org.apache.cassandra', name: "${dtestDependencyName}", version: "${dtestVersion}")
+    integrationTestImplementation(group: 'org.apache.cassandra', name: 'dtest-api', version: "${dtestApiVersion}")
     // Needed by the Cassandra dtest framework
     integrationTestImplementation("org.junit.vintage:junit-vintage-engine:${junitVersion}")
 }
@@ -425,8 +426,9 @@ rat {
     reportDir.set(file("build/reports/rat"))
 }
 
-integrationTest.onlyIf { "true" != System.getenv("skipIntegrationTest") }
 compileIntegrationTestJava.onlyIf { "true" != System.getenv("skipIntegrationTest") }
+checkstyleIntegrationTest.onlyIf { "true" != System.getenv("skipIntegrationTest") }
+spotbugsIntegrationTest.onlyIf { "true" != System.getenv("skipIntegrationTest") }
 
 // copyDist gets called on every build
 copyDist.dependsOn installDist, copyJolokia
