@@ -22,3 +22,7 @@ vertxVersion=4.2.1
 guavaVersion=27.0.1-jre
 slf4jVersion=1.7.36
 jacksonVersion=2.14.3
+dtestApiVersion=0.0.16
+# trunk is currently 5.1 - update when trunk moves
+dtestVersion=5.1
+dtestDependencyName=cassandra-dtest-local-all
