@@ -21,6 +21,9 @@ package org.apache.cassandra.testing;
 import java.util.Arrays;
 import java.util.stream.Stream;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 /**
  * Generates the list of versions we're going to test against.
  * We will run the same module (trunk for example) against multiple versions of Cassandra.
@@ -32,10 +35,13 @@ import java.util.stream.Stream;
  */
 public class TestVersionSupplier
 {
+    private static final Logger LOGGER = LoggerFactory.getLogger(TestVersionSupplier.class);
+
     Stream<TestVersion> testVersions()
     {
         // By default, we test 2 versions that will exercise oldest and newest supported versions
         String versions = System.getProperty("cassandra.sidecar.versions_to_test", "4.0,5.1");
+        LOGGER.info("Testing with versions={}", versions);
         return Arrays.stream(versions.split(",")).map(String::trim).map(TestVersion::new);
     }
 }
